Fixed type in paragraph

--- a/src/interns/ConleyPrice/index.html
+++ b/src/interns/ConleyPrice/index.html
@@ -17,8 +17,8 @@
       <p>Hello! I am Conley Price a sophomore computer science major at Illinois State University.
         I have a 3.93 GPA and I am a member of the AI and Web Development club on campus. 
         Over winter break I built and wrote software(for flight controller) for my quadcopter.
-        In my AI club last semester I learned how to train a neural network to tell if someone in a image is wearing a mask or not,
-        This semester we are working on putting that trained model into a application.
+        Last Semester in the AI club, I learned how to train neural network's to tell if someone in a image is wearing a mask or not,
+        This semester we are working on putting that trained model into a mobile application.
       </p>
     </div>
   </div>
